<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_new_conversation"
        android:icon="@drawable/ic_action_add_chat"
        android:orderInCategory="10"
        android:showAsAction="ifRoom"
        android:title="@string/action_new_conversation"
        android:visible="false" />

    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_action_select_all"
        android:orderInCategory="12"
        android:showAsAction="ifRoom"
        android:title="@string/action_select_all" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_settings" />

    <item
        android:id="@+id/action_tell_a_friend"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/action_tell_a_friend" />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="@string/action_help" />
</menu>
