<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.settings.SettingsAboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/about_description"
            android:textColor="@color/tt_color_background_dark"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/activity_vertical_margin"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/about_description2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/tt_color_text_dark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/about_copyright"
            android:textColor="@color/tt_color_text"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin_half"
            android:layout_marginTop="@dimen/activity_vertical_margin_half"
            android:background="@color/tt_color_background_complement"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/aboutFragment_textView_visit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/about_visit"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/aboutFragment_textView_contact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/about_contact"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/activity_vertical_margin"/>

        <TextView
            android:id="@+id/aboutFragment_textView_tell_a_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_tell_a_friend"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/activity_vertical_margin"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/activity_vertical_margin"/>

        <TextView
            android:id="@+id/aboutFragment_textView_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/about_version"/>

        <TextView
            android:id="@+id/aboutFragment_textView_serial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/about_serial"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/activity_vertical_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/aboutFragment_textView_tos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/about_tos"
                android:textStyle="italic"/>

            <!--TextView
                android:id="@+id/aboutFragment_textView_legal_notices"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/about_legal_notices"
                android:textStyle="italic"/-->
        </LinearLayout>
    </LinearLayout>
</ScrollView>