<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/llRowNewsTopic"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:padding="8dp">

    <LinearLayout
        android:id="@+id/conversationsAdapter_linearLayout_topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_topics"
        android:baselineAligned="false"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/conversationsAdapter_imageView_starred"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="top"
                android:layout_marginTop="2dp"
                android:src="@drawable/ic_action_chat" />

            <ImageView
                android:id="@+id/conversationsAdapter_imageView_unread"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:src="@drawable/ic_action_unread"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/conversationsAdapter_textView_topic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:hint="@string/no_conversations"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/conversationsAdapter_textView_timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_active"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/conversationsAdapter_textView_replies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_replies"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="italic" />
        </LinearLayout>

    </LinearLayout>


    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewTopic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        ads:adSize="BANNER"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone"
        ads:adUnitId="@string/admob_id_news" />

</LinearLayout>